# axa-go-romaric

./: ImageAnypointCLit  ca-b.crt  ca.crt  client-b.crt  client.crt  client.key  deployAPIContractPython  forward-proxy-config.yaml  tekton-deploy-apicontract
CICD-kino-tekton/: ReadMe  global-ai.yaml  global-image-custom.yaml  global-pipe-multiple-step.yaml  global-pipe.yaml  install-env-rust.yaml  pipeline-env-rust.yaml  pipelinerun-rust.yaml  rust-certificate.pem  serviceaccount-docker.yaml
CICD-kino-tekton/api-instance-deploy/: cicd-api-instance.yaml
CICD-kino-tekton/demo/: cicd-api-instance.yaml
CICD-kino-tekton/docker-image/: dockerfile
apim.policy.antimalware-scanning-feature-deploy/definition/: gcl.yaml
apim.policy.antimalware-scanning-feature-deploy/playground/config/: api.yaml
apim.policy.antimalware-scanning-feature-deploy/src/: error_handling.rs  lib.rs
apim.policy.antimalware-scanning-feature-deploy/src/spe/: scan.rs  token.rs
apim.policy.antimalware-scanning-feature-deploy/tests/requests/hello/: api.yaml
hassen/group-message-logging-policy/: Cargo.toml
hassen/group-message-logging-policy/definition/: gcl.yaml
hassen/group-message-logging-policy/playground/: docker-compose.yaml
hassen/group-message-logging-policy/playground/config/: api.yaml
hassen/group-message-logging-policy/src/: lib copy.rs  lib-Rom.ros  lib.rs
hassen/group-message-logging-policy/tests/common/: logging.yaml
hassen/group-payload-logging-policy/: Cargo.toml
hassen/group-payload-logging-policy/definition/: gcl.yaml
hassen/group-payload-logging-policy/playground/: docker-compose.yaml
hassen/group-payload-logging-policy/playground/config/: api.yaml
hassen/group-payload-logging-policy/src/: lib-org.ors  lib.rs
hassen/group-payload-logging-policy/tests/: common.rs  requests.rs
hassen/group-payload-message-logging-policy/: Cargo.toml-org  Makefile  README.md
hassen/group-payload-message-logging-policy/definition/: gcl.yaml
hassen/group-payload-message-logging-policy/playground/: docker-compose.yaml
hassen/group-payload-message-logging-policy/playground/config/: api.yaml
hassen/group-payload-message-logging-policy/src/: lib.rs
hassen/group-payload-message-logging-policy/tests/: requests.rs
policies/apim.policy.antimalware-scanning-feature-deploy/: Cargo.toml  README.md
policies/apim.policy.antimalware-scanning-feature-deploy/playground/: docker-compose.yaml
policies/apim.policy.antimalware-scanning-feature-deploy/playground/back/: nginx.conf
policies/apim.policy.antimalware-scanning-feature-deploy/playground/config/: api.yaml  service.yaml
policies/apim.policy.antimalware-scanning-feature-deploy/src/: lib.rs
policies/apim.policy.antimalware-scanning-feature-deploy/src/spe/: calls.rs  mod.rs  process.rs
policies/apim.policy.group-client-certificat-extraction-feature-policy8/: Cargo.toml  README.md
policies/apim.policy.group-client-certificat-extraction-feature-policy8/definition/: gcl.yaml
policies/apim.policy.group-client-certificat-extraction-feature-policy8/playground/config/: api.yaml
policies/apim.policy.group-client-certificat-extraction-feature-policy8/src/: lib.rs
policies/apim.policy.group-client-certificat-extraction-feature-policy8/src/error_handling/: mod.rs  tests.rs
policies/apim.policy.group-client-certificat-extraction-feature-policy8/src/filter/: mod.rs  tests copy.rs  tests.rs
policies/apim.policy.group-client-certificat-extraction-feature-policy8/src/subject_dn/: mod.rs  tests.rs
policies/apim.policy.group-client-certificat-extraction-feature-policy8/src/utils/: mod.rs  tests.rs
policies/apim.policy.group-client-certificat-extraction-feature-policy8/tests/common/: mod.rs
policies/group-antimalware-scan-saas/: Cargo.toml  README.md
policies/group-antimalware-scan-saas/definition/: gcl.yaml
policies/group-antimalware-scan-saas/playground/: docker-compose.yaml
policies/group-antimalware-scan-saas/playground/config/: api-localhost.yaml  api.yaml
policies/group-antimalware-scan-saas/src/: lib.rs
policies/group-antimalware-scan-saas/src/spe/: calls.rs  (+1 more)
policies/group-message-logging-policy-1.1.0/: .project.yaml  Cargo.toml  Makefile
policies/group-message-logging-policy-1.1.0/playground/: docker-compose.yaml
policies/group-message-logging-policy-1.1.0/playground/config/: api-copy-org.txt  api.yaml
policies/group-message-logging-policy-1.1.0/src/: lib.rs
policies/group-message-logging-policy-1.1.0/tests/common/: note.txt
policies/group-message-logging-policy-1.2.0/: .gitignore  Cargo.toml  Makefile
policies/group-message-logging-policy-1.2.0/.cargo/: config.toml
policies/group-message-logging-policy-1.2.0/src/: lib.rs  utils.rs
policies/group-message-logging-policy-1.2.0/tests/: common.rs
policies/group-payload-logging-policy-1.1.0/: Cargo.toml  README.md
policies/group-payload-logging-policy-1.1.0/playground/: docker-compose.yaml
policies/group-payload-logging-policy-1.1.0/playground/config/: api.yaml
policies/group-payload-logging-policy-1.1.0/src/: lib.rs  utils.rs
(+11 files in other folders)
