# Copyright 2024 AXA. All rights reserved.
[package]
name = "group_message_logging_policy"
version = "1.0.1"
rust-version = "1.87.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.anypoint]
#C4E-CMN
#group_id = "c4c35be9-c141-4844-8bb1-85837fdd7ec1"
#AOE-CMX
#group_id = "fa8e8050-81d8-477a-a4c3-0c4f25df8525"
#C4E-DMN
#group_id = "2acb50c1-07a0-4b42-83fb-24458bbf7e5c"
#ALJ-CMN
#group_id = "f7a57101-19b5-4646-929d-133f3f5552f4"
#ACH-CMN
group_id = "d1556d76-bc6b-41cc-af62-9d708bfe8dfc"
#C4E-PGL
#group_id = "6e0e0748-41b8-4b66-afdd-19f3cff002c2"
#AHK-CMN
#group_id = "dc4cba1c-9b9c-471f-ab3b-9c8e8e39d228"


definition_asset_id = "group-message-logging-policy"
implementation_asset_id = "group-message-logging-policy-flex"

[dependencies]
pdk = { version = "1.4.0", registry = "anypoint" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
anyhow = "1.0"
log = "0.4"
chrono = "0.4.19"
regex = "1.5"
url = "2.5"

[dev-dependencies]
pdk-test = { version = "1.2.0", registry = "anypoint" }
httpmock = "0.6"
reqwest = "0.11"

[lib]
crate-type = ["cdylib"]
name="group_message_logging_policy"
path="src/lib.rs"

[profile.release]
lto = true
opt-level = 'z'
strip = "debuginfo"
